--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/http-client": "4.3.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*"
     },
@@ -64,7 +66,9 @@
         }
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.7",
         "symfony/maker-bundle": "^1.11",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0"
     }
 }
